# naas

./:  .coveragerc  .cz.toml  .dockerignore  .gitignore  .pre-commit-config.yaml  .pyhist  .snyk  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  Dockerfile.dev  Dockerfile.prod  Dockerfile.test  LICENSE  Makefile  README.md  SECURITY.md  asset_demo.json  build_runner_dev.sh  demo.json  docker-compose.yaml  docker-entrypoint.sh  info.json  install  install.sh  publish.sh  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  teest.py  test_runner.sh  test_runner_dev.sh  test_runner_prod.sh  windows_start.bat
binder/: Dockerfile  jupyter_notebook_config.py  postBuild  start
custom/: custom.css  jupyter_server_config.py  overrides.json  set_workspace.json  set_workspace_browser.json
dev/: docker-compose.yml  jupyterhub_config.py
docs/: basic_docs.ipynb  basic_docs.md
extensions/naasai/: .gitignore  .prettierignore  LICENSE  MANIFEST.in  README.md  RELEASE.md  install.json  package-lock.json  package.json  pyproject.toml  setup.py
extensions/naasai/.github/workflows/: build.yml  check-release.yml
extensions/naasai/schema/: plugin.json
extensions/naasai/src/: index.ts
naas/: __init__.py  __main__.py  api.py  assets.py  callback.py  conftest.py  demo_file.py  demo_runner.py  dependency.py  jobs.py  logger.py  manager.py  notifications.py  ntypes.py  onboarding.py  proxy.py  refresh.py  runner.py  runner_old.py  scheduler.py  secret.py  static.py  test.json  test_jobs.py  test_logger.py  test_manager.py  test_notifications.py  test_secret.py  types.py
(+106 files in other folders)
